--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,5 +36,9 @@
         android:id="@+id/imageview_1"
         android:src="@mipmap/ic_launcher"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/imageview_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </android.support.constraint.ConstraintLayout>
