--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <ImageView
-        android:id="@+id/nidhi"
-        android:layout_width="wrap_content"
+        android:id="@+id/kirti"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
